<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_menu"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home_menu" />
        <item
            android:id="@+id/browse_menu"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/browse_menu" />
        <item
            android:id="@+id/my_ads_menu"
            android:icon="@drawable/profile_ic"
            android:title="@string/my_ads_menu" />
        <item
            android:id="@+id/chats_menu"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/chats_menu" />
        <item
            android:id="@+id/favorites_menu"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/favorites_menu" />
    </group>

    <item
        android:id="@+id/place_an_ad_menu"
        android:title="@string/place_an_ad_menu">
        <menu>
            <item
                android:id="@+id/contact_menu"
                android:title="@string/contact_menu"/>
            <item
                android:id="@+id/chate_with_us_menu"
                android:title="@string/chate_with_us_menu" />
            <item
                android:id="@+id/choose_country_menu"
                android:title="@string/choose_country_menu" />
            <item
                android:id="@+id/choose_language_menu"
                android:title="@string/choose_language_menu" />
            <item
                android:id="@+id/about_app_menu"
                android:title="@string/about_app_menu" />
            <item
                android:id="@+id/login_app_menu"
                android:title="@string/log_in_menu" />
            <item
                android:visible="false"
                android:id="@+id/logOut_app_menu"
                android:title="@string/log_out_menu" />
            <item
                android:visible="false"
                android:id="@+id/send"
                android:title=" " />
            <item
                android:visible="false"
                android:id="@+id/log_out_menu"
                android:title="@string/log_out_menu" />
        </menu>
    </item>
</menu>
