<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServicesScreenActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/all_services"
                    android:textColor="#000"
                    android:textSize="17sp" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="205,500 ads"
                    android:textColor="#6D6A6A"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#949292"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <LinearLayout
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/business_services"
                    android:textColor="#635F5F"
                    android:textSize="17sp" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="50,500 ads"
                    android:textColor="#928D8D"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#949292"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/car_repairs"
                    android:textColor="#635F5F"
                    android:textSize="17sp" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="100,500 ads"
                    android:textColor="#928D8D"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#949292"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/domestic_services"
                    android:textColor="#635F5F"
                    android:textSize="17sp" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="75,500 ads"
                    android:textColor="#928D8D"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#949292"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/events"
                    android:textColor="#635F5F"
                    android:textSize="17sp" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="135,500 ads"
                    android:textColor="#928D8D"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#949292"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/home_services"
                    android:textColor="#635F5F"
                    android:textSize="17sp" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="35,500 ads"
                    android:textColor="#928D8D"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#949292"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/movers"
                    android:textColor="#635F5F"
                    android:textSize="17sp" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="25,500 ads"
                    android:textColor="#928D8D"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#949292"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/personal_services"
                    android:textColor="#635F5F"
                    android:textSize="17sp" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="150,500 ads"
                    android:textColor="#928D8D"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#949292"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <View
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#949292"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pets_sevices"
                    android:textColor="#635F5F"
                    android:textSize="17sp" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="150,500 ads"
                    android:textColor="#928D8D"
                    android:textSize="12sp" />
            </LinearLayout>
            <View
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#949292"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/private_tutors"
                    android:textColor="#635F5F"
                    android:textSize="17sp" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="150,500 ads"
                    android:textColor="#928D8D"
                    android:textSize="12sp" />

            </LinearLayout>

            <View
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#949292"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/other_services"
                    android:textColor="#635F5F"
                    android:textSize="17sp" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="150,500 ads"
                    android:textColor="#928D8D"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>