<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MobileScreenActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/all_mobile"
                    android:textColor="#000"
                    android:textSize="17sp" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="205,500 ads"
                    android:textColor="#6D6A6A"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#949292"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <LinearLayout
                android:id="@+id/lineaelayout_mobile_phone"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mobile_phone"
                    android:textColor="#635F5F"
                    android:textSize="17sp" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="50,500 ads"
                    android:textColor="#928D8D"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#949292"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <LinearLayout
                android:id="@+id/lineaelayout_mobile_accessories"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mobile_accessories"
                    android:textColor="#635F5F"
                    android:textSize="17sp" />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="100,500 ads"
                    android:textColor="#928D8D"
                    android:textSize="12sp" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>